--- a/.github/workflows/sonarcube.yml
+++ b/.github/workflows/sonarcube.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
+    needs: build
     steps:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
