--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,12 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
+    - name: Cache .NET packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.nuget/packages
+        key: ${{ runner.os }}-dotnet-packages
+        restore-keys: ${{ runner.os }}-dotnet-packages
     - name: Build
       run: dotnet build --no-restore
   sonar-build:
