--- a/AWS.S3.Wrapper/AWS.S3.Wrapper.csproj
+++ b/AWS.S3.Wrapper/AWS.S3.Wrapper.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.104.30" />
+  </ItemGroup>
+
 </Project>
