--- a/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
+++ b/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
@@ -18,6 +18,12 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
+    - name: Set up environment variables
+      run: echo "export CODACY_PROJECT_TOKEN=$CODACY_PROJECT_TOKEN" >> $GITHUB_ENV
+      env:
+            CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
@@ -28,10 +34,6 @@ jobs:
       run: |
           mkdir -p coverage
           cp my-app/AWS.S3.Wrapper.Tests/TestResults/*/coverage.cobertura.xml coverage/coverage.cobertura.xml
-    - name: Set up environment variables
-      run: echo "export CODACY_PROJECT_TOKEN=$CODACY_PROJECT_TOKEN" >> $GITHUB_ENV
-      env:
-        CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
     - name: Install cURL
       run: sudo apt-get install curl -y
