--- a/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
+++ b/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
@@ -12,18 +12,19 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      Greeting: Hello
+
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    - name: Set up environment variables
-      run: echo "export CODACY_PROJECT_TOKEN=$CODACY_PROJECT_TOKEN" >> $GITHUB_ENV
-      env:
-            CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
