--- a/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
+++ b/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --collect:"XPlat Code Coverage"
+      run: dotnet test
     - name: Copy coverage report
       run: |
           mkdir -p coverage
