--- a/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
+++ b/.github/workflows/s3-wrapper-upgrade-temp-ci.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     env:
       CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
