Fix exception message and directory path handling

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,8 @@ name: .NET
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - "feature/*"
   pull_request:
     branches: [ "master" ]
 
