--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -45,18 +45,14 @@ jobs:
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
       - name: Install coverage tools
         run: |
-          dotnet tool install --global coverlet.console
+          dotnet tool install --global dotnet-coverage
       - name: Build and analyze
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"bhuvaneshsaha" /o:"bhuvaneshsaha" 
                 /d:sonar.token="${{ secrets.SONAR_TOKEN }}" 
                 /d:sonar.host.url="https://sonarcloud.io" 
-                /d:sonar.cs.opencover.reportsPaths=coverage.xml
+                /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
           dotnet build --no-incremental
-          coverlet .\CovExample.Tests\bin\Debug\net6.0\CovExample.Tests.dll
-                --target "dotnet" 
-                --targetargs "test --no-build"
-                -f=opencover 
-                -o="coverage.xml"
+          dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
