--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,10 +32,15 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --collect:"XPlat Code Coverage"
-    - name: Copy coverage report to codecov
+    - name: Copy coverage report
       run: |
           mkdir -p coverage
           cp AWS.S3.Wrapper.Tests/TestResults/*/coverage.cobertura.xml coverage/coverage.cobertura.xml
+    - name: Install cURL
+      run: sudo apt-get install curl -y
+    - name: Download and run Codacy script
+      run: |
+        curl -Ls https://coverage.codacy.com/get.sh -o codacy_script.sh
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
 
